单进程、线程、非堵塞、长连接的http服务器

--- a/demo-python/base/demo/webserver/html/demo01.html
+++ b/demo-python/base/demo/webserver/html/demo01.html
@@ -5,7 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>hello world</h1>
-    <h2><a href="demo01.html">demo01</a></h2>
+    <h2>this is demo2 page</h2>
 </body>
 </html>
