10-给程序传递参数、添加web服务器的配置文件、添加shell功能

--- a/demo-python/base/demo/miniweb/html/demo01.html
+++ b/demo-python/base/demo/miniweb/html/demo01.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="css/demo.css" rel="stylesheet" type="text/css" />
+    <script src="js/demo.js" type="text/javascript"/>
 </head>
 <body>
     <h2>this is demo2 page</h2>
