--- a/demo-python/base/demo/miniweb/html/index.html
+++ b/demo-python/base/demo/miniweb/html/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<link lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="css/demo.css" rel="stylesheet" type="text/css" ></link>
+    <script src="js/demo.js" type="text/javascript"></script>
 </head>
 <body>
     <h1>hello world</h1>
