--- a/demo-python/base/demo/miniweb/html/index.html
+++ b/demo-python/base/demo/miniweb/html/index.html
@@ -9,5 +9,16 @@
 <body>
     <h1>hello world</h1>
     <h2><a href="demo01.html">demo01</a></h2>
+    <table border="1">
+        <tr>
+            <td>ID</td>
+            <td>商品名</td>
+            <td>类别</td>
+            <td>品牌</td>
+            <td>价格</td>
+            <td>操作</td>
+        </tr>
+        {%content%}
+    </table>
 </body>
 </html>
