--- a/demo-oc/demo-netty/src/main/java/org/demo/netty/im/simple/v4/im/websocketdemov4.html
+++ b/demo-oc/demo-netty/src/main/java/org/demo/netty/im/simple/v4/im/websocketdemov4.html
@@ -42,7 +42,7 @@
                ws.onmessage = function (evt) 
                { 
                   var received_msg = evt.data;
-                  alert("数据已接收...");
+                  console.log("数据已接收... , 返回数据 :  "+received_msg);
                };
                 
                ws.onclose = function()
