--- a/demo-oc/demo-netty/src/main/java/org/demo/netty/im/simple/v4/im/websocketdemov4-customer.html
+++ b/demo-oc/demo-netty/src/main/java/org/demo/netty/im/simple/v4/im/websocketdemov4-customer.html
@@ -103,7 +103,7 @@
       function doSend(packet) {
 	    if (packet) {
 	    	console.info(socket.readyState);
-	      if (socket.readyState === 1) {
+	      if (socket.readyState == 1) {
 	        //packet.pid = Common.getPid();
 	        
 	        packet.pid = 'testpid';
